перебазировал names.txt в data1

--- a/nasdaq.ipynb
+++ b/nasdaq.ipynb
@@ -125,7 +125,7 @@
     "    URL = 'https://www.eoddata.com/stocklist/NASDAQ/'\n",
     "    names = get_names_from_url(URL)\n",
     "\n",
-    "    file_names = 'names.txt'\n",
+    "    file_names = 'data1/names.txt'\n",
     "    names = update_file_names(names, file_names)\n",
     "\n",
     "    download_stocks_to_excel(names, input_file)\n",
